Allow adding of arguments

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,4 +6,4 @@ api-version: 1.13
 commands:
   clirun:
     permission: clirunner.run
-    usage: /clirun <script>
+    usage: /clirun <script> [args...]
